2006-04-26  Sami Wagiaalla  <swagiaal@redhat.com>

	* glade/procpop.glade: Added resume,block,ask me options
	to the observer dialog.

2006-04-25  Phil Muldoon  <pmuldoon@redhat.com>

	* sessions/DebugProcess.java: Add in super(name,tooltip) call.

	* druid/AddedProcTreeView.java: Removed. Simplify with CheckedListView.
	* druid/ExitProcessGroupsDataModel.java: Ditto.
	* druid/ProcessExitSelectionTreeView.java: Ditto.

	* druid/CreateFryskSessionDruid.java: Added new Session instance.
	(addProcessParent): Add routine to add new process types to live session
	data model.
	(changeGroupState): Modify and simply the 3 corner cases for adding a process
	group to a live sesssion object (no parent, parent only, parent and children).
	(getProcessSelectionControls): Mount the addedProcTreeView using Listview. Link
	datamodel to session object. Rework state changes to follow simplified states.
	(getProcessExitControls): Mount the processExitSelectionTreeView using the
	CheckedListView. Link datamodel to session object. Add TaskTerminatingObserver
	on selection of CellRendererToggle.
	(nextPage): Simply, and removing data model swapping. New Session model 
	does not need this (model is now unified).

2006-04-24  Adam Jocksch  <ajocksch@redhat.com>

	* register/RegisterWindow.java (setTask): Now uses saveBinaryValue
	to do the brunt of the work.
	(saveBinaryValue): No longer refreshes list, explicit call is
	required, also propery sign-extends the LE binary string.	

2006-04-21  Sami Wagiaalla  <swagiaal@redhat.com>

	* test/TestSessionSaveLoad.java: New testcase to text session
	saving and loading.
	* sessions/SessionManager.java: Added saving/loading.
	* sessions/DebugProcess.java: Added saving/loading code.
	made DebugProcess a child of GuiObject.
	* sessions/Session.java: Ditto.
	Added removeProcess method.

2006-04-19  Sami Wagiaalla  <swagiaal@redhat.com>

	* sessions/DebugProcess.java: New file.
	* sessions/Session.java: New file.