@@ -7,7 +7,6 @@
   <property name="border_width">6</property>
   <property name="width_request">600</property>
   <property name="height_request">480</property>
-  <property name="visible">True</property>
   <property name="title" translatable="yes">Debug Session Druid</property>
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
   <property name="window_position">GTK_WIN_POS_CENTER</property>
