@@ -1,3 +1,7 @@
+2006-04-27  Sami Wagiaalla  <swagiaal@redhat.com>
+
+	* glade/frysk_create_session_druid.glade: Maded druid hidden.
+
 2006-04-26  Sami Wagiaalla  <swagiaal@redhat.com>
 
 	* glade/procpop.glade: Added resume,block,ask me options
